===v4.5.1===
 * Bug Fixes:
 ** The "Ignore Runes" setting should no longer appear for item cooldown icons
 ** Meta icons should now inherit icon properties from other icons a little better.

===v4.5.0===
 * Fully integrated main addon settings/group settings into the icon editor.
 * You can now set custom text to be displayed where a keybinding would normally be displayed in order to remind you of your keybindings directly on TMW icons.
 * Moving/resizing a group that is anchored to a frame other than UIParent will adjust the offsets instead of resetting the anchor to UIParent.
 * Reactive icons and conditions should now more accurately reflect the state of the abilities that they are checking.
 * Greatly increased the versatility and customizability of condition icons.
 * Improved rune cooldown detection.
 * Version warnings should be slightly less annoying.
 * Added monochrome as a font outline option.
 * Buff/debuff icons can now display the first number found in the tooltip of the aura that has been found on the icon.
 * New icon events:
 ** On Alpha Increase
 ** On Alpha Decrease
 * New Conditions:
 ** Buff/Debuff - Tooltip Scan
 ** Points in talent
 * Bug Fixes
 ** (r164) Tooltip scan conditions should now properly function with spellID input
 ** (r170) TellMeWhen_Options-r169.lua:215: attempt to index field "?" (a nil value)
 ** (r170) TellMeWhen_Options-r169.lua:1674: attempt to index field "?" (a nil value)
 
===v4.4.6===
 * Bug Fixes:
 ** (r151) conditions.lua line 319: attempt to perform arithmetic on local 'start' (a nil value)
 
===v4.4.4===
 * Bug Fixes:
 ** (r145) Totem icons now work for mushrooms/DK ghouls
 ** (r146) Unit cooldown icons now properly sort